updating to aws sdk 3, code changes to new way of calling the sdk and update to package.json

--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.208.0",
+    "@aws-sdk/client-dynamodb": "^3.315.0",
+    "@aws-sdk/client-sqs": "^3.315.0",
     "@paralleldrive/cuid2": "^2.0.1",
     "@prisma/client": "^4.5.0",
-    "aws-sdk": "^2.1148.0",
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
