--- a/src/utils/stripe-webhook-sfdc/package.json
+++ b/src/utils/stripe-webhook-sfdc/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-eventbridge": "^3.316.0",
+    "@aws-sdk/client-secrets-manager": "^3.317.0",
     "stripe": "^12.1.1"
   }
 }
