--- a/src/utils/stripe-webhook-sfdc/package.json
+++ b/src/utils/stripe-webhook-sfdc/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-eventbridge": "^3.316.0",
     "@aws-sdk/client-secrets-manager": "^3.317.0",
     "axios": "^1.3.6",
+    "jsonwebtoken": "^9.0.0",
     "stripe": "^12.1.1"
   }
 }
