--- a/src/utils/stripe-webhook-sfdc/serverless.yml
+++ b/src/utils/stripe-webhook-sfdc/serverless.yml
@@ -31,10 +31,10 @@ custom:
   sfdc:
     dev:
       oAuthUrl: 'https://test.salesforce.com/services/oauth2/token'
-      tokenExpiry: 30
+      tokenDuration: 30
     prod:
       oAuthUrl: 'tbd'
-      tokenExpiry: 30
+      tokenDuration: 30
 
 functions:
   webhookHandler:
@@ -80,4 +80,4 @@ functions:
       JWT_TOKEN_SUBJECT: ${self:custom.jwt.${self:provider.stage}.tokenSubject}
       JWT_TOKEN_AUDIENCE: ${self:custom.jwt.${self:provider.stage}.tokenAudience}
       OAUTH_TOKEN_URL: ${self:custom.sfdc.${self:provider.stage}.oAuthUrl}
-      SFDC_TOKEN_EXPIRY: ${self:custom.sfdc.${self:provider.stage}.tokenExpiry}
+      SFDC_TOKEN_DURATION: ${self:custom.sfdc.${self:provider.stage}.tokenDuration}
