Completes initial development of SFDC token refresher
* modifies expiration in dev to be 30 days
* modifies logging

--- a/src/utils/stripe-webhook-sfdc/serverless.yml
+++ b/src/utils/stripe-webhook-sfdc/serverless.yml
@@ -37,9 +37,9 @@ custom:
     tokenParamName: '/stripe-webhook-sfdc/sfdc-token'
     dev:
       oAuthUrl: 'https://test.salesforce.com/services/oauth2/token'
-      tokenDuration: 0.09
+      tokenDuration: 30
       notificationValue: 2
-      notificationUnits: 'hours'
+      notificationUnits: 'days'
     prod:
       oAuthUrl: 'tbd'
       tokenDuration: 30
