adding eslint and prettier

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:debug": "DEBUG=express:* node app.js",
     "dev": "nodemon app.js",
     "generate-courses": "node src/utils/course-generator/generate-courses.js",
-    "lint": "eslint src --ext js,jsx",
+    "lint": "eslint src",
     "lint:fix": "eslint src --ext js,jsx --fix",
     "rebuild-tables": "npm run drop-tables && npm run create-tables && npm run seed-tables",
     "services:up": "docker-compose -f ./local/docker-compose.yml up -d",
@@ -26,11 +26,15 @@
     "@babel/eslint-parser": "^7.18.2",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
-    "eslint": "^8.17.0",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "mocha": "^10.0.0",
     "mocha-prepare": "^0.1.0",
     "nodemon": "^2.0.20",
     "nyc": "^15.1.0",
+    "prettier": "2.8.7",
     "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
