--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "services:logs": "docker-compose -f ./local/docker-compose.yml logs",
     "cert-gen:deploy-stack": "cd src/utils/certificate-sharing/generate-certificate-image && sh generate-certificate-image-deploy.sh",
     "cert-gen:regenerate": "node src/utils/certificate-sharing/regenerate-certificate-images/RegenerateCertificateImagesService.js",
-    "cert-gen:validate": "d src/utils/certificate-sharing/generate-certificate-image && aws cloudformation validate-template --template-body file://certificate-image-generator-stack.yml"
+    "cert-gen:validate": "d src/utils/certificate-sharing/generate-certificate-image && aws cloudformation validate-template --template-body file://certificate-image-generator-stack.yml",
+    "test": "jest"
   },
   "author": "Topcoder.com",
   "license": "UNLICENSED",
@@ -27,6 +28,7 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "eslint": "^8.17.0",
+    "jest": "^29.5.0",
     "mocha": "^10.0.0",
     "mocha-prepare": "^0.1.0",
     "nodemon": "^2.0.20",
