--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /learning-paths-api
 # Install the dependencies from package.json
 RUN npm install
 
-CMD node app.js
+CMD ["node", "app.js"]
